Added Reviews for R1 features
